reset is_connected timer, changed some companies stuff, few improvements + swagger
