# backend/src/api-docs/docs/user.api-docs.yaml
@@ -34,6 +34,9 @@ components:
         is_connected:
           type: boolean
           default: false
+        prefered_language:
+          type: string
+          enum: ['fr', 'nl', 'en']
         refresh_token:
           type: string
           default: ''
@@ -82,7 +85,7 @@ paths:
   /user/signUp:
     post:
       summary: "Sign up a new user"
-      description: "Creates a new user with provided details. Validates required fields and roles, checks for existing users, hashes password, and stores the user"
+      description: "Creates a new user with provided details. Validates required fields and roles, checks for existing users, hashes password, and stores the user and sends a confirmation email"
       operationId: "addUser"
       tags:
         - "User"
@@ -119,6 +122,9 @@ paths:
                 email:
                   type: string
                   example: "user@example.com"
+                prefered_language:
+                  type: string
+                  example: "fr nl or en"
                 lastname:
                   type: string
                   example: "Doe"
@@ -131,6 +137,14 @@ paths:
                 location:
                   type: string
                   example: "New York"
+                pick_up_line:
+                  type: string
+                  example: "Les étoiles brillent dans la nuit, illuminant les rêves de ceux qui contemplent le ciel."
+                  maxLength: 120
+                description:
+                  type: string
+                  maxLength: 240
+                  example: "Le vent souffle doucement à travers les arbres, portant avec lui les secrets murmurés des anciens. Les feuilles dansent au rythme de la brise, créant une mélodie apaisante qui invite à la réflexion et à la tranquillité."
                 registration_date:
                   type: string
                   format: date-time
@@ -172,7 +186,7 @@ paths:
                     type: string
                     example: "5e5df7fc8953ad317845f0f9"
           '400':
-            description: "Bad request. Missing required fields or invalid role."
+            description: "Bad request. Missing required fields or invalid role. Or same data's as before sent"
             content:
               application/json:
                 schema:
@@ -181,6 +195,16 @@ paths:
                     error:
                       type: string
                       example: "Bad request: username, password, role, and email are required fields."
+          '404':
+            description: "User not found or no changes needed (input same as existing data)."
+            content:
+              application/json:
+                schema:
+                  type: object
+                  properties:
+                    error:
+                      type: string
+                      example: "No changes have been made, same infos as before have been given"
           '409':
           description: "Conflict. A user with the same username or email already exists."
           content:
@@ -345,6 +369,108 @@ paths:
                   error:
                     type: string
                     example: "Error retrieving user"
+  /user/confirmEmail/{token}:
+    get:
+      summary: "Confirm user's email"
+      description: "Confirms the user's email address using the token provided."
+      operationId: "confirmEmail"
+      tags:
+        - "User"
+      parameters:
+        - in: path
+          name: token
+          required: true
+          schema:
+            type: string
+            description: "The token used to confirm the user's email."
+            example: "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9..."
+      responses:
+        '200':
+          description: "Email confirmed successfully."
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    example: "Compte confirmé avec succès !"
+        '400':
+          description: "Invalid or expired token."
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: string
+                    example: "Token invalide ou expiré."
+        '500':
+          description: "Internal server error."
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: string
+                    example: "Erreur interne du serveur."
+  /user/resendConfirmationEmail/{email}:
+    get:
+      summary: "Resend confirmation email"
+      description: "Resends the confirmation email to the user."
+      operationId: "resendConfirmationEmail"
+      tags:
+        - "User"
+      parameters:
+        - in: path
+          name: email
+          required: true
+          schema:
+            type: string
+            description: "The email address of the user to resend the confirmation email to."
+            example: "user@example.com"
+      responses:
+        '200':
+          description: "A new confirmation email has been sent."
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    example: "Un nouvel email de confirmation a été envoyé."
+        '400':
+          description: "User already confirmed or invalid request."
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: string
+                    example: "Cet utilisateur est déjà confirmé."
+        '404':
+          description: "User not found."
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: string
+                    example: "Utilisateur non trouvé."
+        '500':
+          description: "Internal server error."
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: string
+                    example: "Erreur interne du serveur."
   #DELETE
   /user/deleteUser:
     delete:
@@ -443,6 +569,10 @@ paths:
                   type: string
                   description: "New URL of the user's profile picture."
                   example: "https://example.com/new-profile.jpg"
+                prefered_language:
+                  type: string
+                  description: "language the user's gonna use"
+                  example: "fr, nl or en"
                 lastname:
                   type: string
                   description: "New last name of the user."
@@ -505,7 +635,7 @@ paths:
                     type: string
                     example: "User's infos have been updated successfully"
         '400':
-          description: "Bad request due to invalid input fields or improper field updates based on user role."
+          description: "Bad request due to invalid input fields or improper field updates based on user role. Or no data has changed since last update"
           content:
             application/json:
               schema:
@@ -868,8 +998,77 @@ paths:
                   error:
                     type: string
                     example: "Error updating user"
+  /user/updatePreferedLanguage/{param}:
+    put:
+      summary: "Update user's preferred language"
+      description: "Updates the preferred language for a user, identified by username or ID. Ensures that only valid languages ('fr', 'nl', 'en') are chosen."
+      operationId: "updateUserPreferredLanguage"
+      tags:
+        - "User"
+      # Uncomment the following line if authentication is required
+      # security:
+      #   - BearerAuth: []
+      parameters:
+        - in: path
+          name: param
+          required: true
+          schema:
+            type: string
+            description: "Username or ID of the user whose preferred language is to be updated."
+            example: "johndoe"
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                prefered_language:
+                  type: string
+                  description: "The new preferred language of the user. Must be 'fr', 'nl', or 'en'."
+                  example: "en"
+      responses:
+        '200':
+          description: "Preferred language updated successfully."
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    example: "User's preferred language updated successfully"
+        '400':
+          description: "Bad request due to invalid input or attempt to update multiple fields."
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: string
+                    example: "Only fr, nl, or en can be chosen as preferred_language"
+        '404':
+          description: "User not found or no changes made, possibly due to incorrect or unchanged input data."
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: string
+                    example: "No changes have been made, same info as before has been given"
+        '500':
+          description: "Internal server error while updating user information."
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: string
+                    example: "Error updating user"
   
-
 
   
 
